Various bug fixes and improvements

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.2.2"
 kotlin = "1.9.23"
 kotlinx-coroutines = "1.7.3"
 ktor = "2.3.11"
+arrow = "1.2.4"
 junit = "5.8.1"
 testcontainers = "1.19.8"
 slf4j = "2.0.13"
@@ -19,6 +20,8 @@ ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "k
 ktor-client-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
 ktor-network = { module = "io.ktor:ktor-network", version.ref = "ktor" }
 ktor-network-tls = { module = "io.ktor:ktor-network-tls", version.ref = "ktor" }
+arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
+arrow-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
 kermit = "co.touchlab:kermit:2.0.2"
 
 # JVM Integration test libraries
