--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.2.2"
 kotlin = "2.0.0"
 kotlinx-coroutines = "1.7.3"
-ktor = "2.3.11"
+ktor = "3.0.0-beta-2"
 arrow = "1.2.4"
 junit = "5.8.1"
 testcontainers = "1.19.8"
