Fixed TLS configuration, added TLS integration test

--- a/mqtt-client/src/jvmTest/resources/Dockerfile
+++ b/mqtt-client/src/jvmTest/resources/Dockerfile
@@ -1,3 +1,8 @@
 FROM eclipse-mosquitto
 COPY mosquitto.conf /mosquitto/config/mosquitto.conf
 COPY --chmod=700 passwd /mosquitto/config/passwd
+
+# For how to setup self signed certificates see https://mosquitto.org/man/mosquitto-tls-7.html
+COPY ca.crt /mosquitto/config/certs/ca.crt
+COPY server.key /mosquitto/config/certs/server.key
+COPY server.crt /mosquitto/config/certs/server.crt
