--- a/mqtt-client/src/jvmTest/resources/mosquitto.conf
+++ b/mqtt-client/src/jvmTest/resources/mosquitto.conf
@@ -2,6 +2,13 @@
 log_type all
 connection_messages true
 
+password_file /mosquitto/config/passwd
+
 listener 1883
 allow_anonymous false
-password_file /mosquitto/config/passwd
+
+listener 8883
+allow_anonymous false
+cafile /mosquitto/config/certs/ca.crt
+keyfile /mosquitto/config/certs/server.key
+certfile /mosquitto/config/certs/server.crt
