--- a/mqtt-client/src/jvmTest/resources/mosquitto.conf
+++ b/mqtt-client/src/jvmTest/resources/mosquitto.conf
@@ -12,3 +12,14 @@ allow_anonymous false
 cafile /mosquitto/config/certs/ca.crt
 keyfile /mosquitto/config/certs/server.key
 certfile /mosquitto/config/certs/server.crt
+
+listener 8080
+protocol websockets
+allow_anonymous false
+
+listener 8443
+protocol websockets
+allow_anonymous false
+cafile /mosquitto/config/certs/ca.crt
+keyfile /mosquitto/config/certs/server.key
+certfile /mosquitto/config/certs/server.crt
