Added more integration tests 2

--- a/mqtt-client/src/jvmTest/resources/mosquitto.conf
+++ b/mqtt-client/src/jvmTest/resources/mosquitto.conf
@@ -5,6 +5,9 @@ connection_messages true
 password_file /mosquitto/config/passwd
 
 listener 1883
+allow_anonymous true
+
+listener 1884
 allow_anonymous false
 
 listener 8883
