--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,8 +25,8 @@ jobs:
           java-version: '17'
           distribution: "zulu"
 
-      - name: Set up Docker Buildx to use Docker in unit tests
-        uses: docker/setup-buildx-action@v3
+      #      - name: Set up Docker Buildx to use Docker in unit tests
+      #        uses: docker/setup-buildx-action@v3
 
       - name: Setup Gradle cache
         uses: actions/cache@v3
