--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,14 +1,16 @@
 ---
 name: Build Ktor MQTT Library
 on: [ push ]
+env:
+  ACTIONS_RUNNER_DEBUG: true
 jobs:
   build:
     strategy:
       matrix:
         include:
-          - target: iosSimulatorArm64Test
-            os: macos-latest
-          - target: testReleaseUnitTest
+          # - target: iosSimulatorArm64Test
+          #   os: macos-latest
+          - target: allTests
             os: ubuntu-latest
     runs-on: ${{ matrix.os }}
 
