--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,4 +40,4 @@ jobs:
       - name: Build with Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
-          arguments: ${{ matrix.target }}
+          arguments: ${{ matrix.target }} -x jvmTest
