--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -38,11 +38,11 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/.lock') }}
 
       - name: Build with Gradle
+        uses: gradle/actions/setup-gradle@v3
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SECRET_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_PASSWORD }}
-        run: |
-          echo -------------- $ORG_GRADLE_PROJECT_mavenCentralUsername --------------
-          ./gradlew ${{ matrix.target }}
+        with:
+          arguments: ${{ matrix.target }}
