#1 Fixed DefaultEngineTest and Dockerfile requiring BuildKit

--- a/mqtt-client-test/src/jvmTest/resources/Dockerfile
+++ b/mqtt-client-test/src/jvmTest/resources/Dockerfile
@@ -1,6 +1,7 @@
 FROM eclipse-mosquitto
 COPY mosquitto.conf /mosquitto/config/mosquitto.conf
-COPY --chmod=700 passwd /mosquitto/config/passwd
+COPY passwd /mosquitto/config/passwd
+RUN chmod 700 /mosquitto/config/passwd
 
 # For how to setup self signed certificates see https://mosquitto.org/man/mosquitto-tls-7.html
 COPY ca.crt /mosquitto/config/certs/ca.crt
