--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -34,11 +34,9 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build with Gradle
-        uses: gradle/actions/setup-gradle@v4
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SECRET_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_PASSWORD }}
-        with:
-          arguments: ${{ matrix.target }}
+        run: ./gradlew ${{ matrix.target }}
