--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,11 @@
+#Kotlin
 kotlin.code.style=official
+kotlin.daemon.jvmargs=-Xmx3072M
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+#Gradle
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.configuration-cache=false
+org.gradle.caching=false
+#Android
+android.nonTransitiveRClass=true
+android.useAndroidX=true
