Publishing pages only on new tag

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -2,8 +2,9 @@
 name: Publish WASM Test Page
 on:
   push:
-    branches:
-      - 'main'
+    tags:
+      - '**'
+
 env:
   ACTIONS_RUNNER_DEBUG: true
 jobs:
