--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build with Gradle
-        run: ./gradlew ${{ matrix.target }}
+        run: ./gradlew ${{ matrix.target }} --rerun-tasks
 
       - name: Publish Test Results
         uses: actions/upload-artifact@v4
