--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,18 +2,23 @@
 name: Build and Test Ktor MQTT Library
 on: workflow_dispatch
 
-env:
-  ACTIONS_RUNNER_DEBUG: true
 jobs:
-  build:
+  test:
+    name: Test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        include:
-          - target: allTests
-            os: macos-latest
-          - target: allTests
-            os: ubuntu-latest
-    runs-on: ${{ matrix.os }}
+        os: [ ubuntu-latest, macos-latest ]
+
+    # On Linux, start a Mosquitto container as a service
+    services:
+      mosquitto:
+        image: eclipse-mosquitto:2
+        ports:
+          - 1883:1883
+        # We need to provide a config to allow anonymous connections for the test
+        volumes:
+          - ${{ github.workspace }}/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
     steps:
       - name: Checkout
@@ -31,8 +36,23 @@ jobs:
       - name: Setup Gradle cache
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Build with Gradle
-        run: ./gradlew ${{ matrix.target }} --rerun-tasks
+      - name: Create Mosquitto Config
+        run: echo -e "listener 1883\nallow_anonymous true" > mosquitto.conf
+
+      - name: Install and Start Mosquitto (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install mosquitto
+          # Start the broker in the background using the config file
+          mosquitto -c mosquitto.conf &
+          sleep 5 # Give the broker a moment to start up
+
+      - name: Run Tests
+        run: ./gradlew allTests
+        env:
+          # Your tests can now connect to localhost:1883 on both platforms
+          MQTT_SERVER: localhost
+          MQTT_PORT: 1883
 
       - name: Publish Test Results
         uses: actions/upload-artifact@v4
