--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,21 +1,19 @@
 ---
 name: Build and Test Ktor MQTT Library
-on: workflow_dispatch
+on:
+  push:
+    branches: [ "add-wasm-support" ]
 
 jobs:
-  test:
-    name: Test on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, macos-latest ]
-
-    # On Linux, start a Mosquitto container as a service
+  test-linux:
+    name: Test on Linux
+    runs-on: ubuntu-latest
     services:
       mosquitto:
         image: eclipse-mosquitto:2
         ports:
           - 1883:1883
+          - 8081:8081
         # We need to provide a config to allow anonymous connections for the test
         volumes:
           - ${{ github.workspace }}/mosquitto.conf:/mosquitto/config/mosquitto.conf
@@ -36,17 +34,6 @@ jobs:
       - name: Setup Gradle cache
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Create Mosquitto Config
-        run: echo -e "listener 1883\nallow_anonymous true" > mosquitto.conf
-
-      - name: Install and Start Mosquitto (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install mosquitto
-          # Start the broker in the background using the config file
-          mosquitto -c mosquitto.conf &
-          sleep 5 # Give the broker a moment to start up
-
       - name: Run Tests
         run: ./gradlew allTests
         env:
@@ -59,5 +46,48 @@ jobs:
         if: always()
         with:
           name: test-results
+          path: '**/build/reports/tests/**/*.html'
+          retention-days: 20
+
+  test-macos:
+    name: Test on macOS
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/actions/wrapper-validation@v4
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: "zulu"
+
+      - name: Setup Gradle cache
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Create Mosquitto Config
+        run: echo -e "listener 1883\nallow_anonymous true" > mosquitto.conf
+
+      - name: Install and Start Mosquitto
+        run: |
+          brew install mosquitto
+          # Start the broker in the background using the config file
+          mosquitto -c mosquitto.conf &
+          sleep 5 # Give the broker a moment to start up
+
+      - name: Run Tests
+        run: ./gradlew allTests
+        env:
+          MQTT_SERVER: localhost
+          MQTT_PORT: 1883
+
+      - name: Publish Test Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results-macos
           path: '**/build/reports/tests/**/*.html'
           retention-days: 20
