--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,18 +13,19 @@ jobs:
         image: eclipse-mosquitto:2
         ports:
           - 1883:1883
-          - 8081:8081
         # We need to provide a config to allow anonymous connections for the test
         volumes:
           - ${{ github.workspace }}/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
     steps:
+      - name: Create Mosquitto Config
+        run: echo -e "listener 1883\nallow_anonymous true" > mosquitto.conf
+
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Validate Gradle Wrapper
         uses: gradle/actions/wrapper-validation@v4
-
       - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
