--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Create Mosquitto Config
-        run: echo -e "listener 1883\nallow_anonymous true" > ${{ github.workspace }}/mosquitto/mosquitto.conf
+        run: sudo echo -e "listener 1883\nallow_anonymous true" > ${{ github.workspace }}/mosquitto/mosquitto.conf
 
       - name: Restart Mosquitto
         # Restart Mosquitto after volume has been created
