--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,12 +13,13 @@ jobs:
         image: eclipse-mosquitto:2
         ports:
           - 1883:1883
-        volumes:
-          - ${{ github.workspace }}/mosquitto:/mosquitto/config/
 
     steps:
       - name: Create Mosquitto Config
-        run: sudo echo -e "listener 1883\nallow_anonymous true" > ${{ github.workspace }}/mosquitto/mosquitto.conf
+        run: echo -e "listener 1883\nallow_anonymous true" > ${{ github.workspace }}/mosquitto.conf
+
+      - name: Copy mosquitto configuration into the container
+        run: docker cp ${{ github.workspace }}/mosquitto.conf mosquitto:/mosquitto/config/mosquitto.conf
 
       - name: Restart Mosquitto
         # Restart Mosquitto after volume has been created
