--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,7 @@ jobs:
         image: eclipse-mosquitto:2
         ports:
           - 1883:1883
+        options: --name mosquitto --hostname mosquitto
 
     steps:
       - name: Create Mosquitto Config
