--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ kotlin.native.ignoreDisabledTargets=true
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
-org.gradle.configuration-cache=false
-org.gradle.caching=false
+org.gradle.configuration-cache=true
+org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
