Running test action on main

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@
 name: Build and Test Ktor MQTT Library
 on:
   push:
-    branches: [ "add-wasm-support" ]
+    branches: [ "main" ]
 
 jobs:
   test-linux:
