--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,9 @@ jobs:
   test-linux:
     name: Test on Linux
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      pull-requests: write
     services:
       mosquitto:
         image: eclipse-mosquitto:2
@@ -51,12 +54,11 @@ jobs:
           MQTT_SERVER: localhost
 
       - name: Publish Test Results
-        uses: actions/upload-artifact@v4
-        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: (!cancelled())
         with:
-          name: test-results
-          path: '**/build/reports/tests/**/*.html'
-          retention-days: 20
+          files: |
+            test-results/**/*.xml
 
 #  test-macos:
 #    name: Test on macOS
