fix wrong test-results path

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,7 +58,7 @@ jobs:
         if: (!cancelled())
         with:
           files: |
-            test-results/**/*.xml
+            **/build/test-results/**/*.xml
 
 #  test-macos:
 #    name: Test on macOS
