--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,11 +54,11 @@ jobs:
           MQTT_SERVER: localhost
 
       - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: (!cancelled())
+        uses: mikepenz/action-junit-report@v5
+        if: success() || failure() # always run even if the previous step fails
         with:
           files: |
-            **/build/test-results/**/*.xml
+            **/build/test-results/**/TEST-*.xml
 
 #  test-macos:
 #    name: Test on macOS
