--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,8 +57,8 @@ jobs:
         uses: mikepenz/action-junit-report@v5
         if: success() || failure() # always run even if the previous step fails
         with:
-          files: |
-            **/build/test-results/**/TEST-*.xml
+          report_paths: '**/build/test-results/**/TEST-*.xml'
+          include_passed: true
 
 #  test-macos:
 #    name: Test on macOS
