--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-ktormqtt = "0.9.0-alpha"
+ktormqtt = "0.8.2"
 
 agp = "8.12.3"
 kotlin = "2.2.21"
-ktor = "3.3.2"
+ktor = "3.3.3"
 kotlinx-coroutines = "1.10.2"
-kotlinx-io = "0.8.0"
+kotlinx-io = "0.8.2"
 kotlinx-browser = "0.5.0"
 junit = "5.13.4"
 testcontainers = "1.21.3"
