--- a/mqtt-client/src/jvmTest/resources/mosquitto.conf
+++ b/mqtt-client/src/jvmTest/resources/mosquitto.conf
@@ -4,13 +4,11 @@ connection_messages true
 
 password_file /mosquitto/config/passwd
 
-listener 1883
-allow_anonymous true
-
 listener 1884
 allow_anonymous false
 
 listener 8883
+socket_domain ipv4
 allow_anonymous false
 cafile /mosquitto/config/certs/ca.crt
 keyfile /mosquitto/config/certs/server.key
@@ -26,3 +24,7 @@ allow_anonymous false
 cafile /mosquitto/config/certs/ca.crt
 keyfile /mosquitto/config/certs/server.key
 certfile /mosquitto/config/certs/server.crt
+
+# Anonymous port must be at the end, see https://github.com/eclipse-mosquitto/mosquitto/issues/2382
+listener 1883
+allow_anonymous true
