--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,8 @@ jobs:
         uses: gradle/actions/setup-gradle@v5
 
       - name: Run all tests
+        env:
+          RUN_INTEGRATION_TEST: 'true'
         run: ./gradlew allTests
 
       - name: Publish Test Results
