--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,9 +29,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v5
 
       - name: Run all tests
-        env:
-          RUN_INTEGRATION_TEST: 'true'
-        run: ./gradlew allTests
+        run: ./gradlew -DRUN_INTEGRATION_TEST=true allTests
 
       - name: Publish Test Results
         uses: mikepenz/action-junit-report@v5
